force-app/main/default/objects/GLBP1_Participante_de_cotizacion__c/GLBP1_Participante_de_cotizacion__c.object-meta.xml
<CustomObject>
    <label>Participante de cotización</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>N° Participante de cotización</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participantes de cotización</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>