force-app/main/default/objects/GLBP1_Participante_de_cotizacion__c/fields/GLBP1_Comentarios__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Comentarios__c</fullName>
    <label>Comentarios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>