force-app/main/default/objects/GLBP1_Participante_de_cotizacion__c/fields/GLBP1_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Cotizacion__c</fullName>
    <label>Cotización</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Participantes de cotización</relationshipLabel>
    <relationshipName>Participantes_de_cotizaci_n</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>