force-app/main/default/objects/GLBP1_Participante_de_cotizacion__c/fields/GLBP1_Fecha_vigencia__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Fecha_vigencia__c</fullName>
    <label>Fecha vigencia</label>
    <type>Date</type>
</CustomField>