force-app/main/default/objects/GLBP1_Participante_de_cotizacion__c/fields/GLBP1_Funcion__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Funcion__c</fullName>
    <label>Función</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GLBP1_Funcion_participante</valueSetName>
    </valueSet>
</CustomField>