force-app/main/default/objects/GLBP1_Participante_de_cotizacion__c/fields/GLBP1_ID_Externo__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_ID_Externo__c</fullName>
    <externalId>true</externalId>
    <label>ID Externo Cotización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>