force-app/main/default/objects/GLBP1_Participante_de_cotizacion__c/fields/GLBP1_Participante__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Participante__c</fullName>
    <label>Participante</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Participantes de cotización</relationshipLabel>
    <relationshipName>Participantes_de_cotizaci_n</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>