force-app/main/default/objects/GLBP1_Participante_de_cotizacion__c/fields/GLBP1_Producto__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Participantes de cotización</relationshipLabel>
    <relationshipName>Participantes_de_cotizaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>